[package]
name = "envq"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/tcurdt/envq"
repository = "https://github.com/tcurdt/envq"
description = "A jq/yq-like tool for .env files"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# [profile.dist]
# inherits = "release"
# lto = "thin"
